--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 <body>
     <header>
         <img src="#" alt="Logo" class="logo">
-        <nav>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-        </nav>
+        <nav></nav>
         <div id="lang_switch" class="langs"></div>
     </header>
 
